mongoose flight part 02 done

--- a/views/flights/index.ejs
+++ b/views/flights/index.ejs
@@ -6,8 +6,6 @@
     <tr>
       <th>Airline</th>
       <th>Airport</th>
-      <th>FlightNo</th>
-      <th>Departs</th>
     </tr>
   </thead>
   <tbody>
@@ -17,8 +15,7 @@
     <tr style="<%= flight.departs < today ? 'color: red' : '' %>">
       <td><%= flight.airline %></td>
       <td><%= flight.airport %></td>
-      <td><%= flight.flightNo %></td>
-      <td><%= flight.departs.toLocaleString() %></td>
+      <td><a href="/flights/<%= flight._id %>">Details</a></td>
     </tr>
     <!-- Close the forEach using EJS here -->
     <% }); %>
