--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,14 +5,8 @@
     <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
   <body>
+    <%- include('./partials/header') %>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
-    <nav>
-      <a href="/">Home</a>
-      |
-      <a href="/flights/new">New Flight</a>
-      |
-      <a href="/flights">All Flights</a>
-    </nav>
   </body>
 </html>
