mongoose flight part 03 done

--- a/views/flights/index.ejs
+++ b/views/flights/index.ejs
@@ -1,11 +1,12 @@
 <%- include('../partials/header') %>
 
-<h2>Flight List</h2>
+<h2 style="text-align: center;">Flight List</h2>
 <table>
   <thead>
     <tr>
       <th>Airline</th>
       <th>Airport</th>
+      <th></th>
     </tr>
   </thead>
   <tbody>
