--- a/views/flights/show.ejs
+++ b/views/flights/show.ejs
@@ -1,67 +1,82 @@
 <%- include('../partials/header') %>
 
-<h2><%= flight.airline %> Flight</h2>
+<div id="show-container">
 
-<p>--------- Flight Details ---------</p>
+  <h2><%= flight.airline %> Flight</h2>
+  
+  <p>--------- Flight Details ---------</p>
+  
+  <div class="airline">
+    <p>Airline: <%= flight.airline %></p>
+  </div>
+  <div class="airline">
+    <p>Airport: <%= flight.airport %></p>
+  </div>
+  <div class="airline">
+    <p>Flight No: <%= flight.flightNo %></p>
+  </div>
+  <div class="airline">
+    <p>Departs: <%= flight.departs %></p>
+  </div>
+  <a href="/flights/<%= flight._id%>/tickets/new"
+  style="color: red; background: blue; border-radius: 8px; padding: 5px; text-decoration: none;"
+  >New Ticket</a>
 
-<div class="airline">
-  <p>Airline: <%= flight.airline %></p>
+  <p>-------- Show Tickets --------</p>
+  <!-- create a table  -->
+  <% tickets.forEach(ticket => { %>
+    <div>ticket seat: <%= ticket.seat  %></div>
+    <div>ticket price: <%= ticket.price  %></div>
+  <% }) %>
+  
+  <p>-------- Add Destinations --------</p>
+  <!-- add to cast form below this comment -->
+  <form
+    id="add-flight"
+    action="/flights/<%= flight._id %>/destinations"
+    method="POST"
+  >
+    <label>Airport: 
+      <select name="airport">
+        <option value="AUS" selected>AUS</option>
+        <option value="DFW">DFW</option>
+        <option value="DEN">DEN</option>
+        <option value="LAX">LAX</option>
+        <option value="SAN">SAN</option>
+      </select><br>
+    <label>Arrival: <input type="date" name="arrival" /><br>
+    <!-- <input type="submit"> -->
+    <button type="submit">Add Destination</button>
+  </form>
+  
+  <p>--------- Flight Arrivals ---------</p>
+  <br />
+  <div class="flight-destinations" style="background: black">
+    <% if (flight.destinations.length) { %>
+      <table>
+        <thead>
+          <tr>
+            <th>Date</th>
+            <th>Destination</th>
+            <th>Arrival</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% flight.destinations.forEach(dstn => { %>
+            <tr>
+              <td><%= dstn.createdAt.toLocaleDateString()  %></td>
+              <td><%= dstn.airport  %></td>
+              <td><%= dstn.arrival  %></td>
+            </tr>
+          <% }) %>
+        </tbody>
+      </table>
+    <% } else { %>
+      <h5>No Destinations Yet.</h5>
+    <% } %>
+  </div>
+
 </div>
-<div class="airline">
-  <p>Airport: <%= flight.airport %></p>
-</div>
-<div class="airline">
-  <p>Flight No: <%= flight.flightNo %></p>
-</div>
-<div class="airline">
-  <p>Departs: <%= flight.departs %></p>
-</div>
-
-<p>-------- Add Destinations --------</p>
-<!-- add to cast form below this comment -->
-<form
-  id="add-flight-to-destination"
-  action="/flights/<%= flight._id %>/destinations"
-  method="POST"
->
-  <label>Airport: 
-    <select name="airport">
-      <option value="AUS" selected>AUS</option>
-      <option value="DFW">DFW</option>
-      <option value="DEN">DEN</option>
-      <option value="LAX">LAX</option>
-      <option value="SAN">SAN</option>
-    </select><br>
-  <label>Arrival: <input type="date" name="arrival" /><br>
-  <input type="submit">
-  <!-- <button type="submit">Add Destination</button> -->
-</form>
-
-<p>--------- Flight Arrivals ---------</p>
-<br />
-
-<% if (flight.destinations.length) { %>
-  <table>
-    <thead>
-      <tr>
-        <th>Date</th>
-        <th>Destination</th>
-        <th>Arrival</th>
-      </tr>
-    </thead>
-    <tbody>
-      <% flight.destinations.forEach(dstn => { %>
-        <tr>
-          <td><%= dstn.createdAt.toLocaleDateString()  %></td>
-          <td><%= dstn.airport  %></td>
-          <td><%= dstn.arrival  %></td>
-        </tr>
-      <% }) %>
-    </tbody>
-  </table>
-<% } else { %>
-  <h5>No Destinations Yet.</h5>
-<% } %>
 
 
 <%- include('../partials/footer') %>
