--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
   </head>
   <body>
     <%- include('./partials/header') %>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <h1 style="text-align: center;"><%= title %></h1>
+    <p style="text-align: center;">Welcome to <%= title %></p>
   </body>
 </html>
